Apply OpenRewrite (without module-info.java)